# sticky-notes

./: .gitignore  README.md  io.omercngiz.StickyNotes.json  meson.build
data/: io.omercngiz.GnomeStickyNotes.gschema.xml  io.omercngiz.StickyNotes.desktop.in  io.omercngiz.StickyNotes.gschema.xml  io.omercngiz.StickyNotes.metainfo.xml.in  io.omercngiz.StickyNotes.service.in  meson.build
data/icons/: meson.build
debian/: changelog  control
po/: POTFILES.in
src/: gnome-sticky-notes-application.c  gnome-sticky-notes-autostart.c  gnome-sticky-notes-autostart.h  gnome-sticky-notes-backup.c  gnome-sticky-notes-backup.h  gnome-sticky-notes-preferences.c  gnome-sticky-notes-preferences.ui  gnome-sticky-notes-richtext.c  gnome-sticky-notes-tray.c  gnome-sticky-notes-tray.h  gnome-sticky-notes-window.c  gnome-sticky-notes.gresource.xml  main.c  meson.build
